# Edit

./: .gitignore  CHANGELOG.md  CLAUDE.MD  CLAUDE.md  Cargo.toml  Learnings.md  Makefile  README.md  ROADMAP.md  Thoughts.MD
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
benches/: keystroke.rs  large_file.rs  startup.rs
docs/: CAPABILITIES.md  STATUS.md  ai-context-reference.md  benchmarks.md  dev-tmpfs.md
examples/: demo_cast.rs
man/: edit.1
packaging/: edit.spec
scripts/: tmpfs-setup.sh  tmpfs-status.sh  tmpfs-teardown.sh
specs/001-linux-editcom-clone/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-utf16-transcoding/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-session-restore/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-save-as-encoding-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-soft-wrap-mode/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-menu-check-state-indicator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-external-file-watch/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-plugin-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-menu-bar-activation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-file-browser-dialogs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-menu-mnemonics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-undo-clean-revert/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-find-replace-dialog/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-dialog-buttons/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/017-selection-highlight/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/018-field-affordance-help/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/019-find-replace-field-boxes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/020-interactive-dialog-buttons/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/021-scroll-affordances/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/022-file-dialog-filter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/023-mouse-wheel-scroll/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/024-draggable-scrollbar/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/025-go-to-line/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/026-highlight-rust-json-toml/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/027-buffer-tab-bar/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/028-ux-crashfix-keyboard-nav/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/029-ux-completeness-hardening/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/030-interaction-completeness/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/031-dialog-field-caret-click/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/032-word-wise-editing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/039-centralize-ui-state/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/042-harden-error-handling/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/044-per-tab-soft-wrap/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/045-persist-tab-wrap/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/046-harden-raw-index/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/047-session-more-fields/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/048-per-pane-wrap-cache/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/049-recent-files/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/050-sandboxed-fuzz-io/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: app.rs  lib.rs  main.rs
src/app/: actions.rs  dialogs.rs  dispatch.rs  editing.rs  fileops.rs  mouse.rs  search.rs  softwrap.rs  tests.rs
src/buffer/: autosave.rs  mod.rs  rope.rs  undo.rs
src/config/: mod.rs  schema.rs
src/diagnostics/: crash.rs  logging.rs  mod.rs
src/encoding/: detect.rs  mod.rs  transcode.rs
src/highlight/: mod.rs
src/input/: keymap.rs  mod.rs  mouse.rs
src/plugin/: api.rs  consent.rs  highlighter.rs  manifest.rs  mod.rs  registry.rs  sandbox.rs  types.rs
src/recent/: mod.rs
src/search/: highlight.rs  mod.rs
src/security/: mod.rs  sanitize.rs
src/session/: mod.rs
src/ui/: buttons.rs  contextmenu.rs  dialog.rs  editor.rs  file_browser.rs  menubar.rs  mod.rs  plugin_manager.rs  scrollbar.rs  statusbar.rs  tabbar.rs  theme.rs  width.rs  wrap.rs
src/watcher/: mod.rs
tests/fixtures/: cjk_wide.txt  long_line.txt  mixed_width.txt  unicode_sample.txt
tests/integration/: buffer_tab_bar.rs  dialog_browser_buttons.rs  dialog_buttons.rs  dialog_encoding_buttons.rs  dialog_findreplace_buttons.rs  dialog_key_hints.rs  dialog_plugin_buttons.rs  encoding_roundtrip.rs  file_io.rs  (+23 more)
wiki/: Architecture.md  CLI-Reference.md  Configuration.md  Development.md  Encodings.md  FAQ.md  Getting-Started.md  Home.md  Installation.md  Keybindings.md  Plugin-Development.md  Roadmap.md  _Sidebar.md
(+153 files in other folders)
