[package]
name = "edit"
version = "0.3.0"
edition = "2021"
authors = ["Mohiuddin Khan Inamdar"]
description = "Cross-platform reimplementation of MS-DOS EDIT.COM (Linux, BSD, macOS, MyOS)"
license = "MPL-2.0"

[lib]
name = "edit"
path = "src/lib.rs"

[[bin]]
name = "edit"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
unicode-width = "0.1"
unicode-segmentation = "1.11"
encoding_rs = "0.8"
oem_cp = "2"
ropey = "0.6"
chardetng = "0.1"
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
dirs = "5"
log = "0.4"
env_logger = "0.11"
signal-hook = "0.3"
arboard = "3"
notify = "6"
rhai = { version = "1", features = ["sync"] }
semver = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[[test]]
name = "encoding_roundtrip"
path = "tests/integration/encoding_roundtrip.rs"

[[test]]
name = "file_io"
path = "tests/integration/file_io.rs"

[[test]]
name = "recovery"
path = "tests/integration/recovery.rs"

[[test]]
name = "stress"
path = "tests/integration/stress.rs"

[[test]]
name = "session"
path = "tests/integration/session.rs"

[[test]]
name = "encoding_select"
path = "tests/integration/encoding_select.rs"

[[test]]
name = "soft_wrap"
path = "tests/integration/soft_wrap.rs"

[[test]]
name = "file_watch"
path = "tests/integration/file_watch.rs"

[[test]]
name = "plugin_api"
path = "tests/integration/plugin_api.rs"

[[test]]
name = "menu_activation"
path = "tests/integration/menu_activation.rs"

[[test]]
name = "menu_mnemonics"
path = "tests/integration/menu_mnemonics.rs"

[[test]]
name = "undo_clean_revert"
path = "tests/integration/undo_clean_revert.rs"

[[test]]
name = "find_replace"
path = "tests/integration/find_replace.rs"

[[test]]
name = "dialog_buttons"
path = "tests/integration/dialog_buttons.rs"

[[test]]
name = "selection"
path = "tests/integration/selection.rs"

[[test]]
name = "file_browser"
path = "tests/integration/file_browser.rs"

[[test]]
name = "dialog_encoding_buttons"
path = "tests/integration/dialog_encoding_buttons.rs"

[[test]]
name = "dialog_plugin_buttons"
path = "tests/integration/dialog_plugin_buttons.rs"

[[test]]
name = "dialog_browser_buttons"
path = "tests/integration/dialog_browser_buttons.rs"

[[test]]
name = "dialog_findreplace_buttons"
path = "tests/integration/dialog_findreplace_buttons.rs"

[[test]]
name = "help_close_button"
path = "tests/integration/help_close_button.rs"

[[test]]
name = "dialog_key_hints"
path = "tests/integration/dialog_key_hints.rs"

[[test]]
name = "file_dialog_filter"
path = "tests/integration/file_dialog_filter.rs"

[[test]]
name = "mouse_wheel"
path = "tests/integration/mouse_wheel.rs"

[[test]]
name = "scrollbar_interaction"
path = "tests/integration/scrollbar_interaction.rs"

[[test]]
name = "go_to_line"
path = "tests/integration/go_to_line.rs"

[[bench]]
name = "startup"
harness = false

[[bench]]
name = "large_file"
harness = false

[[bench]]
name = "keystroke"
harness = false

[profile.release]
opt-level = 3
lto = true
strip = true

[profile.release-static]
inherits = "release"
opt-level = 3
lto = true
strip = true

[package.metadata.deb]
name = "edit"
maintainer = "The edit contributors"
copyright = "2026, The edit contributors"
license-file = ["LICENSE", "0"]
extended-description = "Full-screen text editor for Linux terminals, faithfully reimplementing MS-DOS EDIT.COM."
depends = "$auto"
section = "editors"
priority = "optional"
assets = [
  ["target/release/edit", "usr/bin/edit", "755"],
  ["man/edit.1", "usr/share/man/man1/edit.1", "644"],
]
